Solved overlapping Button issue #1085  w/signoff

--- a/_sass/calendar.scss
+++ b/_sass/calendar.scss
@@ -2,6 +2,7 @@
 .calendar-meetings {
   max-width: 1140px;
   margin: auto;
+  margin-right: 10px;
   text-align: center;
   color: var(--color-secondary-light);
 
@@ -14,6 +15,7 @@
     margin: 0;
   }
   .fc-addToCalendar-button,.fc-button {
+    //margin: 5px;
     transition: all .4s;
     border: none;
     background-color: var(--brand-color-secondary) !important;
@@ -21,4 +23,8 @@
       background-color: var(--brand-color-primary) !important;
     }
   }
+  .fc-prev-button,.fc-next-button,.fc-today-button{
+    margin: 5px;
+  }
+  
 }
